# define-cli

./: .gitignore  Makefile  README.md  define  pyproject.toml
.github/workflows/: live.yml  test.yml
define_cli/: __init__.py  main.py  render.py  reverso.py  wiktionary.py
define_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_live.py  test_reverso.py  test_wiktionary.py
tests/fixtures/: reverso_bonjour.html  reverso_missing.html  wikt_bonjour.html  wikt_ingewikkeld.html  wikt_missing.html  wikt_schema_defs_in_ul.html  wikt_schema_duplicate_sections.html  wikt_schema_empty_section.html  wikt_schema_heading_class_renamed.html  wikt_schema_no_ipa.html
