[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "define-cli"
version = "0.1.0"
description = "CLI vocabulary lookup tool for language learners"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "rich>=13.0",
    "lxml>=4.9",
]

[project.scripts]
define = "define_cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["define_cli*"]
